--- a/index.html
+++ b/index.html
@@ -336,29 +336,20 @@
     }
 
     /* =========================================================
-       ✅ ROTATIONEN – BASIS (Kontaktkante als Referenz!)
-       ---------------------------------------------------------
-       W2 Basis: 7 & 3 müssen von RECHTS lesbar sein => -90°
-       W1 Basis: 4 & 5 müssen von LINKS  lesbar sein => +90°
-       (Rest bleibt wie bisher)
+       ✅ ROTATIONEN (slot-basiert, NICHT zahl-basiert)
        ========================================================= */
 
-    /* W1 Basis: 2B/2C (9/11) bleiben von oben lesbar => 180° */
+    /* Zeile 2: von Süden lesbar => 180° */
     .slot-2b .num > span,
-    .slot-2c .num > span { --num-rot: 180deg; }
-
-    /* W1 Basis: 3D/4D (3/7 in der Kipp-Anordnung) – wir lassen die Basis-Rotation hier NICHT mehr pauschal.
-       Stattdessen definieren wir exakt die Zahlen, die betroffen sind, über Klassen. */
-    .slot.w1-left-readable .num > span { --num-rot: 90deg; }     /* von links lesbar */
-    .slot.w2-right-readable .num > span { --num-rot: -90deg; }   /* von rechts lesbar */
-
-    /* W2 Basis: 2F/2G (12/2) bleiben von oben lesbar => 180° */
+    .slot-2c .num > span,
     .slot2-2f .num > span,
     .slot2-2g .num > span { --num-rot: 180deg; }
 
-    /* W2 Basis: 3E/4E (5/4) bleiben von links lesbar => -90° (wie gehabt) */
-    .slot2-3e .num > span,
-    .slot2-4e .num > span { --num-rot: -90deg; }
+    /* Kontaktkante: W1 Basis (3D/4D) von Westen/links lesbar => +90° */
+    .slot.w1-left-readable .num > span { --num-rot: 90deg; }
+
+    /* Kontaktkante: W2 Basis (3E/4E) von Osten/rechts lesbar => -90° */
+    .slot.w2-right-readable .num > span { --num-rot: -90deg; }
 
     /* ===== Positionen W1 ===== */
     .slot-2b{ left: calc(var(--cube-x) + 0 * var(--step)); top:  calc(var(--cube-y) + 0 * var(--step)); }
@@ -448,7 +439,7 @@
         <div class="slot slot-2b" data-slot="S1" aria-label="Slot 2B"><div class="num"><span></span></div></div>
         <div class="slot slot-2c" data-slot="S2" aria-label="Slot 2C"><div class="num"><span></span></div></div>
 
-        <!-- W1 Basis: 5 & 4 (Kontaktkante) -> von links lesbar -->
+        <!-- W1 Kontaktkante: von Westen/links lesbar (+90°) -->
         <div class="slot slot-3d w1-left-readable" data-slot="S3" aria-label="Slot 3D"><div class="num"><span></span></div></div>
         <div class="slot slot-4d w1-left-readable" data-slot="S4" aria-label="Slot 4D"><div class="num"><span></span></div></div>
 
@@ -456,7 +447,7 @@
         <div class="slot slot2-2f" data-slot="T1" aria-label="Slot 2F"><div class="num"><span></span></div></div>
         <div class="slot slot2-2g" data-slot="T2" aria-label="Slot 2G"><div class="num"><span></span></div></div>
 
-        <!-- W2 Basis: 7 & 3 (Kontaktkante) -> von rechts lesbar -->
+        <!-- W2 Kontaktkante: von Osten/rechts lesbar (-90°) -->
         <div class="slot slot2-3e w2-right-readable" data-slot="T3" aria-label="Slot 3E"><div class="num"><span></span></div></div>
         <div class="slot slot2-4e w2-right-readable" data-slot="T4" aria-label="Slot 4E"><div class="num"><span></span></div></div>
       </div>
@@ -466,7 +457,7 @@
     </div>
 
     <div class="controls">
-      <button id="btnBestuecken" class="btn">Würfel bestücken</button>
+      <button id="btnBestuecken" class="btn">Würfel mischen</button>
     </div>
   </div>
 
@@ -537,33 +528,40 @@
       slotEls.forEach(s => s.classList.remove("pop"));
     }
 
-    function setFixedNumbers(withPop=false){
-      // W1 Basis:
-      const s1 = slotSpanEls.get("S1"); // 2B
-      const s2 = slotSpanEls.get("S2"); // 2C
-      const s3 = slotSpanEls.get("S3"); // 3D  (hier: 5)
-      const s4 = slotSpanEls.get("S4"); // 4D  (hier: 4)
+    function clearNumbers(){
+      for (const span of slotSpanEls.values()){
+        span.textContent = "";
+        span.classList.remove("n9");
+      }
+    }
 
-      // W2 Basis:
-      const t1 = slotSpanEls.get("T1"); // 2F
-      const t2 = slotSpanEls.get("T2"); // 2G
-      const t3 = slotSpanEls.get("T3"); // 3E  (hier: 3)
-      const t4 = slotSpanEls.get("T4"); // 4E  (hier: 7)
+    // ✅ 8 eindeutige Zahlen aus 1..12
+    function pick8UniqueFrom12(){
+      const nums = Array.from({length: 12}, (_, i) => i + 1);
+      // Fisher-Yates
+      for (let i = nums.length - 1; i > 0; i--){
+        const j = Math.floor(Math.random() * (i + 1));
+        [nums[i], nums[j]] = [nums[j], nums[i]];
+      }
+      return nums.slice(0, 8);
+    }
 
-      // Zahlen setzen (Basis!)
-      if (s1){ s1.textContent = "9";  s1.classList.add("n9"); }
-      if (s2){ s2.textContent = "11"; s2.classList.remove("n9"); }
+    // ✅ Random bestücken (Rotationen bleiben rein per CSS/Slot-Klasse!)
+    function setRandomNumbers(withPop=false){
+      clearNumbers();
 
-      // ✅ W1 Basis: 5 & 4 (von links lesbar – Rotation via Klasse)
-      if (s3){ s3.textContent = "5";  s3.classList.remove("n9"); }
-      if (s4){ s4.textContent = "4";  s4.classList.remove("n9"); }
+      // Slot-Reihenfolge = nur Zuweisungslogik, Rotation bleibt CSS!
+      const order = ["S1","S2","S3","S4","T1","T2","T3","T4"];
+      const picked = pick8UniqueFrom12();
 
-      if (t1){ t1.textContent = "12"; t1.classList.remove("n9"); }
-      if (t2){ t2.textContent = "2";  t2.classList.remove("n9"); }
-
-      // ✅ W2 Basis: 3 & 7 (von rechts lesbar – Rotation via Klasse)
-      if (t3){ t3.textContent = "3";  t3.classList.remove("n9"); }
-      if (t4){ t4.textContent = "7";  t4.classList.remove("n9"); }
+      for (let i = 0; i < order.length; i++){
+        const slotKey = order[i];
+        const span = slotSpanEls.get(slotKey);
+        const n = picked[i];
+        if (!span) continue;
+        span.textContent = String(n);
+        if (n === 9) span.classList.add("n9");
+      }
 
       if (withPop){
         for (const el of slotEls){
@@ -583,7 +581,7 @@
       busy = true;
       btn.disabled = true;
 
-      setFixedNumbers(true);
+      setRandomNumbers(true);
       await sleep(260);
 
       btn.disabled = false;
@@ -599,7 +597,9 @@
 
       buildGridOnce();
       applyQuadrant0();
-      setFixedNumbers(false);
+
+      // Startzustand: direkt einmal random belegen (ohne Pop)
+      setRandomNumbers(false);
     });
 
     window.addEventListener("resize", () => {
