--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
       --btn-bg: #ead7be;
       --btn-text: #2a160c;
       --btn-border: rgba(0,0,0,0.35);
+
+      /* =========================================================
+         ✅ Rotations-Schalter (damit Vorzeichen nie wieder Chaos macht)
+         -------------------------------------------------------------
+         1  = Standard (so wie CSS es "fühlt" auf dem Screen)
+        -1  = Vorzeichen umdrehen (wenn West/Ost vertauscht wirkt)
+         ========================================================= */
+      --rotSign: 1;
     }
 
     html, body { height: 100%; }
@@ -96,7 +104,7 @@
       /* ✅ Achse: Grenze zwischen Spalte D und E (Mitte im Gap) */
       --axis-x: calc(4 * var(--step) - (var(--cell-gap) / 2));
 
-      /* ✅ W1 FIX in Q0 */
+      /* ✅ W2 Basis (links) Fix in Q0 */
       --cube-col: 1;
       --cube-row: 1;
 
@@ -110,10 +118,6 @@
       box-shadow:
         10px 18px 42px rgba(0,0,0,0.55),
         3px 6px 16px rgba(0,0,0,0.35);
-    }
-
-    .board.q0{
-      --cast-x: 18px;  --cast-y: 18px;
     }
 
     .grid{
@@ -155,6 +159,7 @@
       z-index: 2;
       pointer-events: none;
 
+      /* ✅ Innen-Schatten im Box-Boden */
       box-shadow:
         inset 14px 14px 26px rgba(255,255,255,0.14),
         inset -18px -18px 34px rgba(0,0,0,0.22),
@@ -183,15 +188,14 @@
     }
 
     /* =========================================================
-       ✅ GRUPPE (W1 + W2 + Slots + Zahlen + Schatten) als "Canvas"
+       ✅ W2 KIP + W1 KIP als Gruppe (wird 50% in X gestaucht)
        ========================================================= */
     .pairLayer{
       position:absolute;
       inset:0;
-      z-index: 6; /* unter der Divider-Linie, aber über Boden/Grid */
+      z-index: 6; /* unter Divider, über Boden/Grid */
       pointer-events:none;
 
-      /* Skalierung wie Photoshop: nur Breite (X) */
       transform-origin: var(--axis-x) 50%;
       transform: scaleX(var(--pair-scale-x, 0.5));
     }
@@ -211,10 +215,12 @@
 
       filter: blur(1px);
     }
-    .cubeShadow.w1{ left: var(--cube-x); top: var(--cube-y); }
-    .cubeShadow.w2{ left: calc(4 * var(--step)); top: calc(1 * var(--step)); }
+    /* W2 Basis/KIP = links */
+    .cubeShadow.w2{ left: var(--cube-x); top: var(--cube-y); }
+    /* W1 Basis/KIP = rechts */
+    .cubeShadow.w1{ left: calc(4 * var(--step)); top: calc(1 * var(--step)); }
 
-    /* W1 (Basis links) */
+    /* W2 (Basis links) */
     .cube{
       position:absolute;
       left: var(--cube-x);
@@ -244,10 +250,9 @@
         0 0 0 1px rgba(255,255,255,0.10) inset;
 
       z-index: 6;
-      pointer-events: none;
     }
 
-    /* W2 (Basis rechts) */
+    /* W1 (Basis rechts) */
     .cube2{
       position:absolute;
       left: calc(4 * var(--step));
@@ -277,7 +282,6 @@
         0 0 0 1px rgba(255,255,255,0.10) inset;
 
       z-index: 6;
-      pointer-events: none;
     }
 
     /* ===== Slots ===== */
@@ -295,7 +299,6 @@
       border-radius: var(--cell-radius);
 
       z-index: 7;
-      pointer-events: none;
 
       box-shadow:
         1px 1px 0 rgba(255,255,255,0.18) inset,
@@ -312,6 +315,7 @@
       justify-content:center;
       user-select:none;
     }
+
     .slot .num > span{
       display:inline-block;
       font-weight: 900;
@@ -323,6 +327,7 @@
       position: relative;
     }
 
+    /* ✅ Punkt für die 9 */
     .slot .num > span.n9::after{
       content:"";
       position:absolute;
@@ -336,34 +341,33 @@
     }
 
     /* =========================================================
-       ✅ ROTATIONEN (slot-basiert, NICHT zahl-basiert)
+       ✅ EINHEITLICHE LESEREGELN (SÜDEN / WESTEN / OSTEN / NORDEN)
+       ---------------------------------------------------------
+       Süden  = 0°
+       Westen = +90° (Uhrzeigersinn)
+       Osten  = -90° (gegen Uhrzeigersinn)
+       Norden = 180°
+       (Falls vertauscht wirkt: --rotSign auf -1)
        ========================================================= */
+    .read-south { --num-rot: calc(var(--rotSign) * 0deg); }
+    .read-west  { --num-rot: calc(var(--rotSign) * 90deg); }
+    .read-east  { --num-rot: calc(var(--rotSign) * -90deg); }
+    .read-north { --num-rot: calc(var(--rotSign) * 180deg); }
 
-    /* Zeile 2: von Süden lesbar => 180° */
-    .slot-2b .num > span,
-    .slot-2c .num > span,
-    .slot2-2f .num > span,
-    .slot2-2g .num > span { --num-rot: 180deg; }
-
-    /* Kontaktkante: W1 Basis (3D/4D) von Westen/links lesbar => +90° */
-    .slot.w1-left-readable .num > span { --num-rot: 90deg; }
-
-    /* Kontaktkante: W2 Basis (3E/4E) von Osten/rechts lesbar => -90° */
-    .slot.w2-right-readable .num > span { --num-rot: -90deg; }
-
-    /* ===== Positionen W1 ===== */
+    /* ===== Slot-Positionen (fix, wie bisher im Code) ===== */
+    /* Linke Würfelfläche (W2 Basis/KIP) liegt bei --cube-x/--cube-y */
     .slot-2b{ left: calc(var(--cube-x) + 0 * var(--step)); top:  calc(var(--cube-y) + 0 * var(--step)); }
     .slot-2c{ left: calc(var(--cube-x) + 1 * var(--step)); top:  calc(var(--cube-y) + 0 * var(--step)); }
     .slot-3d{ left: calc(var(--cube-x) + 2 * var(--step)); top:  calc(var(--cube-y) + 1 * var(--step)); }
     .slot-4d{ left: calc(var(--cube-x) + 2 * var(--step)); top:  calc(var(--cube-y) + 2 * var(--step)); }
 
-    /* ===== Positionen W2 ===== */
+    /* Rechte Würfelfläche (W1 Basis/KIP) liegt bei col4/row1 */
     .slot2-2f{ left: calc(4 * var(--step) + 1 * var(--step)); top: calc(1 * var(--step) + 0 * var(--step)); }
     .slot2-2g{ left: calc(4 * var(--step) + 2 * var(--step)); top: calc(1 * var(--step) + 0 * var(--step)); }
     .slot2-3e{ left: calc(4 * var(--step) + 0 * var(--step)); top: calc(1 * var(--step) + 1 * var(--step)); }
     .slot2-4e{ left: calc(4 * var(--step) + 0 * var(--step)); top: calc(1 * var(--step) + 2 * var(--step)); }
 
-    /* ✅ Trennlinie (nicht skalieren!) */
+    /* ✅ Divider (bleibt NICHT skaliert!) */
     .divider-DE-rows2to4{
       position:absolute;
       left: calc(var(--axis-x) - 1px);
@@ -422,37 +426,47 @@
 
 <body>
   <div class="stage">
-    <div class="board q0" id="board">
+    <div class="board" id="board">
       <div class="floor" aria-hidden="true"></div>
       <div class="ball" aria-label="Kugel"></div>
       <div id="grid" class="grid" aria-label="8×8 Raster"></div>
 
-      <!-- ✅ Alles was zusammen gehört -> in eine Gruppe -->
-      <div class="pairLayer" id="pairLayer" aria-label="W1+W2 als Gruppe">
-        <div class="cubeShadow w1" aria-hidden="true"></div>
+      <!-- ✅ W2KIP + W1KIP (unsichtbar im Spiel später möglich; hier sichtbar zum Prüfen) -->
+      <div class="pairLayer" id="pairLayer" aria-label="W2+W1 als Gruppe (KIP)">
         <div class="cubeShadow w2" aria-hidden="true"></div>
+        <div class="cubeShadow w1" aria-hidden="true"></div>
 
-        <div class="cube" aria-label="Würfelfläche W1"></div>
-        <div class="cube2" aria-label="Würfelfläche W2"></div>
+        <!-- W2 Basis/KIP (links) -->
+        <div class="cube" aria-label="W2 Basis/KIP"></div>
 
-        <!-- W1 Basis Slots -->
-        <div class="slot slot-2b" data-slot="S1" aria-label="Slot 2B"><div class="num"><span></span></div></div>
-        <div class="slot slot-2c" data-slot="S2" aria-label="Slot 2C"><div class="num"><span></span></div></div>
+        <!-- W1 Basis/KIP (rechts) -->
+        <div class="cube2" aria-label="W1 Basis/KIP"></div>
 
-        <!-- W1 Kontaktkante: von Westen/links lesbar (+90°) -->
-        <div class="slot slot-3d w1-left-readable" data-slot="S3" aria-label="Slot 3D"><div class="num"><span></span></div></div>
-        <div class="slot slot-4d w1-left-readable" data-slot="S4" aria-label="Slot 4D"><div class="num"><span></span></div></div>
+        <!-- =====================================================
+             Slots (8 Stück) + klare Leserichtung per Klasse:
+             - Zeile 2 (oben in der Würfelfläche): Süden lesbar
+             - W2 Kontaktkante (3D/4D): Osten lesbar
+             - W1 Kontaktkante (3E/4E): Westen lesbar
+             ===================================================== -->
 
-        <!-- W2 Basis Slots -->
-        <div class="slot slot2-2f" data-slot="T1" aria-label="Slot 2F"><div class="num"><span></span></div></div>
-        <div class="slot slot2-2g" data-slot="T2" aria-label="Slot 2G"><div class="num"><span></span></div></div>
+        <!-- W2 (links): Zeile 2 => Süden lesbar -->
+        <div class="slot slot-2b read-south" data-slot="S1" aria-label="Slot 2B"><div class="num"><span></span></div></div>
+        <div class="slot slot-2c read-south" data-slot="S2" aria-label="Slot 2C"><div class="num"><span></span></div></div>
 
-        <!-- W2 Kontaktkante: von Osten/rechts lesbar (-90°) -->
-        <div class="slot slot2-3e w2-right-readable" data-slot="T3" aria-label="Slot 3E"><div class="num"><span></span></div></div>
-        <div class="slot slot2-4e w2-right-readable" data-slot="T4" aria-label="Slot 4E"><div class="num"><span></span></div></div>
+        <!-- W2 (links): Kontaktkante => Osten lesbar -->
+        <div class="slot slot-3d read-east" data-slot="S3" aria-label="Slot 3D"><div class="num"><span></span></div></div>
+        <div class="slot slot-4d read-east" data-slot="S4" aria-label="Slot 4D"><div class="num"><span></span></div></div>
+
+        <!-- W1 (rechts): Zeile 2 => Süden lesbar -->
+        <div class="slot slot2-2f read-south" data-slot="T1" aria-label="Slot 2F"><div class="num"><span></span></div></div>
+        <div class="slot slot2-2g read-south" data-slot="T2" aria-label="Slot 2G"><div class="num"><span></span></div></div>
+
+        <!-- W1 (rechts): Kontaktkante => Westen lesbar -->
+        <div class="slot slot2-3e read-west" data-slot="T3" aria-label="Slot 3E"><div class="num"><span></span></div></div>
+        <div class="slot slot2-4e read-west" data-slot="T4" aria-label="Slot 4E"><div class="num"><span></span></div></div>
       </div>
 
-      <!-- ✅ Linie bleibt separat & oben drüber -->
+      <!-- ✅ Divider bleibt separat & oben drüber -->
       <div class="divider-DE-rows2to4" aria-hidden="true"></div>
     </div>
 
@@ -515,53 +529,41 @@
       grid.dataset.built = "1";
     }
 
-    function applyQuadrant0(){
-      boardEl.classList.remove("q1","q2","q3");
-      boardEl.classList.add("q0");
-      boardEl.style.setProperty("--cube-col", "1");
-      boardEl.style.setProperty("--cube-row", "1");
-    }
-
     function sleep(ms){ return new Promise(res => setTimeout(res, ms)); }
 
     function clearPops(){
       slotEls.forEach(s => s.classList.remove("pop"));
     }
 
-    function clearNumbers(){
-      for (const span of slotSpanEls.values()){
-        span.textContent = "";
-        span.classList.remove("n9");
-      }
+    function markNineDot(span, isNine){
+      if(!span) return;
+      if(isNine) span.classList.add("n9");
+      else span.classList.remove("n9");
     }
 
-    // ✅ 8 eindeutige Zahlen aus 1..12
-    function pick8UniqueFrom12(){
-      const nums = Array.from({length: 12}, (_, i) => i + 1);
-      // Fisher-Yates
-      for (let i = nums.length - 1; i > 0; i--){
-        const j = Math.floor(Math.random() * (i + 1));
-        [nums[i], nums[j]] = [nums[j], nums[i]];
+    function getUniqueRandomNumbers(count, min, max){
+      const pool = [];
+      for(let i=min; i<=max; i++) pool.push(i);
+      // Fisher-Yates shuffle
+      for(let i=pool.length-1; i>0; i--){
+        const j = Math.floor(Math.random() * (i+1));
+        [pool[i], pool[j]] = [pool[j], pool[i]];
       }
-      return nums.slice(0, 8);
+      return pool.slice(0, count);
     }
 
-    // ✅ Random bestücken (Rotationen bleiben rein per CSS/Slot-Klasse!)
     function setRandomNumbers(withPop=false){
-      clearNumbers();
+      // Reihenfolge der 8 Slots (fix):
+      const keys = ["S1","S2","S3","S4","T1","T2","T3","T4"];
+      const nums = getUniqueRandomNumbers(8, 1, 12);
 
-      // Slot-Reihenfolge = nur Zuweisungslogik, Rotation bleibt CSS!
-      const order = ["S1","S2","S3","S4","T1","T2","T3","T4"];
-      const picked = pick8UniqueFrom12();
-
-      for (let i = 0; i < order.length; i++){
-        const slotKey = order[i];
-        const span = slotSpanEls.get(slotKey);
-        const n = picked[i];
-        if (!span) continue;
+      keys.forEach((k, idx) => {
+        const span = slotSpanEls.get(k);
+        if(!span) return;
+        const n = nums[idx];
         span.textContent = String(n);
-        if (n === 9) span.classList.add("n9");
-      }
+        markNineDot(span, n === 9);
+      });
 
       if (withPop){
         for (const el of slotEls){
@@ -576,7 +578,7 @@
     }
 
     let busy = false;
-    async function runBestueckung(){
+    async function runShuffle(){
       if (busy) return;
       busy = true;
       btn.disabled = true;
@@ -588,7 +590,7 @@
       busy = false;
     }
 
-    btn.addEventListener("click", runBestueckung);
+    btn.addEventListener("click", runShuffle);
 
     window.addEventListener("load", () => {
       setBoardSquare();
@@ -596,16 +598,14 @@
       setTimeout(setBoardSquare, 80);
 
       buildGridOnce();
-      applyQuadrant0();
 
-      // Startzustand: direkt einmal random belegen (ohne Pop)
+      // Start: gleich random belegen
       setRandomNumbers(false);
     });
 
     window.addEventListener("resize", () => {
       setBoardSquare();
       requestAnimationFrame(setBoardSquare);
-      applyQuadrant0();
     });
   </script>
 </body>
